--- a/src/Corrector/templates/corrector_content_de.html
+++ b/src/Corrector/templates/corrector_content_de.html
@@ -1,9 +1,9 @@
 {{#page}}
 <p><strong>Seite {{page_no}} von Korrektor {{corrector_name}}</strong></p>
 {{#comments}}
-    {{#label}}
-    <p><strong>{{.}}:</strong>{{#cardinal}} (Kardinalfehler){{/cardinal}}{{#excellent}} (Exzellent){{/excellent}} {{text}}</p>
-    {{/label}}
+    <p><strong>{{label}}{{#cardinal}} Kardinalfehler{{/cardinal}}{{#excellent}} Exzellent{{/excellent}}</strong>{{#text}} {{.}}{{/text}}
+        {{#points}}{{#one_point}}(1 Punkt){{/one_point}}{{^one_point}}({{.}} Punkte){{/one_point}}{{/points}}
+    </p>
 {{/comments}}
 {{/page}}
 
