use configured positive and negative rating names

--- a/src/Corrector/templates/corrector_result_de.html
+++ b/src/Corrector/templates/corrector_result_de.html
@@ -27,10 +27,10 @@
 {{#include_comments}}
 
 {{#include_comment_ratings_info}}
-<p>Markierungen exzellenter Passagen oder Kardinalfehler sind informativ enthalten, aber nicht Gegenstand der Korrektur.</p>
+<p>Markierungen "{{positive_rating}}" oder "{{negative_rating}}" sind informativ enthalten, aber nicht Gegenstand der Korrektur.</p>
 {{/include_comment_ratings_info}}
 {{#include_comment_ratings_relevant}}
-<p>Markierungen exzellenter Passagen oder Kardinalfehler sind als Gegenstand der Korrektur enthalten.</p>
+<p>Markierungen "{{positive_rating}}" oder "{{negative_rating}}" sind als Gegenstand der Korrektur enthalten.</p>
 {{/include_comment_ratings_relevant}}
 
 {{#include_comment_points_info}}
