--- a/src/Writer/templates/plain_style.html
+++ b/src/Writer/templates/plain_style.html
@@ -1,7 +1,8 @@
 <style>
     div, p, h1, h2, h3, h4, h5, h6, li, pre {
         font-family: serif;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 200%;
+        text-align: justify;
     }
 </style>
