Allow changed or emptied corrector names in correction pdf

--- a/src/Corrector/templates/corrector_content_de.html
+++ b/src/Corrector/templates/corrector_content_de.html
@@ -1,5 +1,11 @@
 {{#page}}
-<p><strong>Seite {{page_no}} von Korrektor {{corrector_name}}</strong></p>
+{{#corrector_name}}
+<p><strong>Seite {{page_no}} der Korrektur</strong></p>
+{{/corrector_name}}
+{{^corrector_name}}
+<p><strong>Seite {{page_no}} von {{corrector_name}}</strong></p>
+{{/corrector_name}}
+
 {{{comments}}}
 {{/page}}
 
