--- a/src/Corrector/templates/corrector_open_de.html
+++ b/src/Corrector/templates/corrector_open_de.html
@@ -1,3 +1,8 @@
+{{#corrector_name}}
 <h1>Korrektur von {{corrector_name}}</h1>
+{{/corrector_name}}
+{{^corrector_name}}
+<h1>Korrektur</h1>
+{{/corrector_name}}
 
-<b>Korrektur:</b> noch nicht abgeschlossen<br>
+Die Korrektur ist noch nicht abgeschlossen.<br>
