--- a/src/Corrector/templates/corrector_text_de.html
+++ b/src/Corrector/templates/corrector_text_de.html
@@ -1,4 +1,9 @@
+{{#corrector_name}}
 <h1>Gutachten von {{corrector_name}}</h1>
+{{/corrector_name}}
+{{^corrector_name}}
+<h1>Gutachten</h1>
+{{/corrector_name}}
 
 {{#text}}
 {{{.}}}
