Support of general rating criteria

--- a/src/Corrector/templates/corrector_criteria_de.html
+++ b/src/Corrector/templates/corrector_criteria_de.html
@@ -3,12 +3,18 @@
 <table border="1" cellspacing="0" cellpadding="3">
     <tr>
         <td>Kriterium</td>
+        <td>Bezug</td>
         <td>Teilpunkte</td>
     </tr>
     
     {{#criteria}}
     <tr>
         <td>{{title}}</td>
+        <td>
+            {{#is_general}}Allgemein{{/is_general}}
+            {{^is_general}}Textstellen{{/is_general}}
+        </td>
+
         <td>{{points}}</td>
     </tr>
     {{/criteria}}
